--- a/templates/businesses/show.html.twig
+++ b/templates/businesses/show.html.twig
@@ -21,7 +21,7 @@
             </tr>
             <tr>
                 <th>MinDescription</th>
-                <td>{{ business.minDescription }}</td>
+                <td>{{ business.description }}</td>
             </tr>
             <tr>
                 <th>Image</th>
