Revert "feat(product) : #103 Liste des entreprises (#113)"
This reverts commit 27eb778988e3fd21460ea829fd30de839f2927b5.

--- a/templates/businesses/show.html.twig
+++ b/templates/businesses/show.html.twig
@@ -21,7 +21,7 @@
             </tr>
             <tr>
                 <th>MinDescription</th>
-                <td>{{ business.description }}</td>
+                <td>{{ business.minDescription }}</td>
             </tr>
             <tr>
                 <th>Image</th>
