--- a/templates/businesses/_delete_form.html.twig
+++ b/templates/businesses/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('businesses_delete', {'id': business.id}) }}" onsubmit="return confirm('Êtes-vous bien sûr(e) de vouloir supprimer cette entreprise ?');">
+<form method="post" action="{{ path('businesses_delete', {'id': business.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ business.id) }}">
-    <button class="btn btn-xs btn-danger">Supprimer</button>
+    <button class="btn">Delete</button>
 </form>
