--- a/templates/ressources/navbar.html.twig
+++ b/templates/ressources/navbar.html.twig
@@ -27,31 +27,13 @@
         <!-- Navigation menu -->
         <ul class="nav-menu">
           <li>
-            <a href="javascript:;">Les Entreprises</a>
-            <ul>
-              <li><a href="resume-list.html">lien de sous-menu</a></li>
-              <li><a href="resume-detail.html">lien de sous-menu</a></li>
-              <li><a href="resume-add.html">lien de sous-menu</a></li>
-              <li><a href="resume-manage.html">lien de sous-menu</a></li>
-            </ul>
+            <a href="{{ path("businesses_index") }}">Les Entreprises</a>
           </li>
           <li>
-            <a href="javascript:;">Offres d'emploi</a>
-            <ul>
-              <li><a href="company-list.html">lien de sous-menu</a></li>
-              <li><a href="company-detail.html">lien de sous-menu</a></li>
-              <li><a href="company-add.html">lien de sous-menu</a></li>
-              <li><a href="company-manage.html">lien de sous-menu</a></li>
-            </ul>
+            <a href="{{ path("students_offers") }}">Offres d'emploi</a>
           </li>
           <li>
-            <a href="javascript:;">Mon profil</a>
-            <ul>
-              <li><a href="company-list.html">Créér mon CV</a></li>
-              <li><a href="company-detail.html">lien de sous-menu</a></li>
-              <li><a href="company-add.html">lien de sous-menu</a></li>
-              <li><a href="company-manage.html">lien de sous-menu</a></li>
-            </ul>
+            <a href="{{ path("student_profil") }}">Mon profil</a>
           </li>
         </ul>
         <!-- END Navigation menu -->
@@ -61,30 +43,12 @@
         <ul class="nav-menu">
           <li>
             <a href="javascript:;">Les Apprenants</a>
-            <ul>
-              <li><a href="company-list.html">lien de sous-menu</a></li>
-              <li><a href="company-detail.html">lien de sous-menu</a></li>
-              <li><a href="company-add.html">lien de sous-menu</a></li>
-              <li><a href="company-manage.html">lien de sous-menu</a></li>
-            </ul>
           </li>
           <li>
             <a href="javascript:;">Mes offres d'emploi</a>
-            <ul>
-              <li><a href="company-list.html">lien de sous-menu</a></li>
-              <li><a href="company-detail.html">lien de sous-menu</a></li>
-              <li><a href="company-add.html">lien de sous-menu</a></li>
-              <li><a href="company-manage.html">lien de sous-menu</a></li>
-            </ul>
           </li>
           <li>
             <a href="javascript:;">Mon Entreprise</a>
-            <ul>
-              <li><a href="company-list.html">lien de sous-menu</a></li>
-              <li><a href="company-detail.html">lien de sous-menu</a></li>
-              <li><a href="company-add.html">lien de sous-menu</a></li>
-              <li><a href="company-manage.html">lien de sous-menu</a></li>
-            </ul>
           </li>
         </ul>
         <!-- END Navigation menu -->
