--- a/templates/students/edit.html.twig
+++ b/templates/students/edit.html.twig
@@ -6,7 +6,7 @@
   <!-- Page header -->
   <header class="page-header">
     <div class="container page-name">
-      <h1>Edit Students</h1>
+      <h1 class="text-center">Edition de mon profil</h1>
       {{ include('students/_form.html.twig', {'button_label': 'Update'}) }}
     </div>
   </header>
