--- a/templates/students/offer.html.twig
+++ b/templates/students/offer.html.twig
@@ -13,12 +13,12 @@
 				<div class="hgroup">
 					<h1>{{ offer.title }}</h1>
 					<h3>
-						<a href="#">{{ offer.businesses.name }}</a>
+						<a href="#">{{ offer.business.name }}</a>
 					</h3>
 				</div>
 				<time datetime="2016-03-03 20:00"></time>
 				<hr>
-				<p class="lead">{{ offer.minDescription }}</p>
+				<p class="lead">{{ offer.description }}</p>
 
 				<ul class="details cols-3">
 					<li>
@@ -35,13 +35,13 @@
 
 					<li>
 						<i class="fa fa-certificate"></i>
-						<a href="#">{{ offer.sections.name }}</a>
+						<a href="#">{{ offer.section.name }}</a>
 					</li>
 				</ul>
 
 				<div class="button-group">
 					<ul class="social-icons">
-						<li class="title">Share on</li>
+						<li class="title">Partager sur</li>
 						<li>
 							<a class="facebook" href="#">
 								<i class="fa fa-facebook"></i>
