--- a/templates/ressources/navbar.html.twig
+++ b/templates/ressources/navbar.html.twig
@@ -27,7 +27,7 @@
         <!-- Navigation menu -->
         <ul class="nav-menu">
           <li>
-            <a href="{{ path("businesses_index") }}">Les Entreprises</a>
+            <a href="{{ path("businesses_list") }}">Les Entreprises</a>
           </li>
           <li>
             <a href="{{ path("students_offers") }}">Offres d'emploi</a>
