fix(produit) : #128 fix student

--- a/templates/ressources/navbar.html.twig
+++ b/templates/ressources/navbar.html.twig
@@ -30,7 +30,7 @@
             <a href="{{ path("businesses_list") }}">Les Entreprises</a>
           </li>
           <li>
-            <a href="{{ path("students_offers") }}">Offres d'emploi</a>
+            <a href="{{ path("offers_index") }}">Offres d'emploi</a>
           </li>
           <li>
             <a href="{{ path("student_profil") }}">Mon profil</a>
